# opengl_tutorial_oreilly

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
.github/workflows/: cmake-multi-platform.yml
01_hello_window/: CMakeLists.txt  main.cpp
02_first_triangle/: CMakeLists.txt  main.cpp
03_index_buffer/: CMakeLists.txt  main.cpp
04_shaders/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.h  main.cpp
04_shaders/shaders/: fragmentShader.glsl  vertexShader.glsl
05_texture/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.h  Texture2D.h  main.cpp
05_texture/shaders/: vertexShader.glsl
06_virtual_camera/: CMakeLists.txt  Camera.cpp  Camera.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  main.cpp
06_virtual_camera/shaders/: fragmentShader.glsl  vertexShader.glsl
